5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1728_2498.log
== TEST (2019-05-15 09:58:12) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0


while (pa != pb):
	pa = nha*(pca/100)	
	pb = nhb*(pcb/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (pa != pb):
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:59:16) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa != pb):
	pa = nha*(pca/100)	
	pb = nhb*(pcb/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while (pa != pb):
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:00:51) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	pa = nha*(pca/100)	
	pb = nhb*(pcb/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:01:24) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa => pb):
	pa = nha*(pca/100)	
	pb = nhb*(pcb/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
File "XXXX", line 10
    while (pa => pb):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:01:37) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa >= pb):
	pa = nha*(pca/100)	
	pb = nhb*(pcb/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
File "XXXX", line 10
    while (pa => pb):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:04:14) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa >= pb):
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb+100)/)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
File "XXXX", line 12
    pb = nhb*((pcb+100)/)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:04:27) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa >= pb):
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
File "XXXX", line 12
    pb = nhb*((pcb+100)/)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:05:02) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
	
print(acumulador)
-- ERROR:
File "XXXX", line 12
    pb = nhb*((pcb+100)/)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:06:38) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	acumulador = acumulador + 1
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)

	
print(acumulador)
-- ERROR:
File "XXXX", line 12
    pb = nhb*((pcb+100)/)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:06:50) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	acumulador = acumulador + 1
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)

	
print(acumulador)
-- ERROR:
File "XXXX", line 12
    pb = nhb*((pcb+100)/)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:07:19) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	acumulador = acumulador + 1
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)

	
	print(acumulador)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:12:07) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1

print(acumulador)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:12:43) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0
pa = nha
pb = nhb

while (pa <= pb):
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
print(acumulador)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:13:49) 
-- CODE:


while (pa <= pb):
	nha = int(input("Numero de habitantes de A: "))
	nhb = int(input("Numero de habitantes de B: "))
	pca = float(input("Percentual de crescimnto de A: "))
	pcb = float(input("Percentual de crescimnto de B: "))

	acumulador = 0
	pa = nha
	pb = nhb
	
	pa = nha*((pca + 100)/100)	
	pb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
print(acumulador)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (pa <= pb):
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:17:22) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0


while (nhb  > nha ):
	nha = nha*((pca + 100)/100)	
	nhb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
print(acumulador)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:17:38) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0


while (nhb  > nha ):
	nha = nha*((pca + 100)/100)	
	nhb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
print(acumulador)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 10:17:43) 
-- CODE:
nha = int(input("Numero de habitantes de A: "))
nhb = int(input("Numero de habitantes de B: "))
pca = float(input("Percentual de crescimnto de A: "))
pcb = float(input("Percentual de crescimnto de B: "))

acumulador = 0


while (nhb  > nha ):
	nha = nha*((pca + 100)/100)	
	nhb = nhb*((pcb + 100)/100)
	acumulador = acumulador + 1
print(acumulador)
-- EXECUTION TIME:
0.174259
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
